trying to fix mobile bkgd image shifting

--- a/public/main.css
+++ b/public/main.css
@@ -862,7 +862,8 @@ textarea { height: 100%; }
         background-image: url("/Images/queen-mobile-bkgd.jpg");
         background-size: cover;       /* Ensures full coverage */
         background-position: center;  /* Keeps focal point centered */
-        background-repeat: no-repeat; /* Prevents tiling */    
+        background-repeat: no-repeat; /* Prevents tiling */  
+        background-attachment: fixed;  
     }
 
     #topBtn {
